# libch57x

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-ch579.yaml
cmake/: arm-none-eabi.cmake
include/: libch57x.h  libch57x_def.h  libch57x_pwm.h  libch57x_sys_clock.h  libch57x_sys_gpio.h  libch57x_uart.h
lib/CMSIS_Vendor/WCH/CH57x/Include/: ch579.h  ch57x.h  system_ch57x.h
lib/CMSIS_Vendor/WCH/CH57x/Source/: system_ch57x.c
lib/CMSIS_Vendor/WCH/CH57x/Source/GCC/: ch579_FLASH.ld  startup_ch57x.c
src/: libch57x_pwm.c  libch57x_sys_gpio.c  libch57x_uart.c
tools/: regtool.rb
